--- a/css/font.css
+++ b/css/font.css
@@ -1,1 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Nanum+Gothic:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100;200;300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Nanum+Gothic:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
+@import url("https://use.typekit.net/vru4aid.css");
+
+@font-face {
+  font-family: 'Apple SD Gothic Neo';
+  src: url('../font/산들고딕/AppleSDGothicNeoB.woff'),
+    url('../font/산들고딕/AppleSDGothicNeoB.woff'),
+    url('../font/산들고딕/AppleSDGothicNeoH.woff'),
+    url('../font/산들고딕/AppleSDGothicNeoL.ttf'),
+    url('../font/산들고딕/AppleSDGothicNeo.woff'),
+    url('../font/산들고딕/AppleSDGothicNeoB.woff');
+}
