--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,5 @@
 @charset "utf-8";
-@import url('font.css');
-
-@font-face {
-  font-family: 'Aktiv Grotesk', 'Apple SD Gothic Neo';
-  src: url('../font/Trial_aktivgrotesk/TrialStaticFonts/AktivGrotesk_Trial_Bd.ttf') format('ttf'),
-    url('../font/Trial_aktivgrotesk/TrialStaticFonts/AktivGrotesk_Trial_Md.ttf') format('ttf'),
-    url('../font/Trial_aktivgrotesk/TrialStaticFonts/AktivGrotesk_Trial_Lt.ttf') format('ttf'),
-    url('../font/산들고딕/AppleSDGothicNeoB.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoB.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoH.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoL.ttf') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeo.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoB.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Apple SD Gothic Neo';
-  src: url('../font/산들고딕/AppleSDGothicNeoB.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoB.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoH.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoL.ttf') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeo.woff') format('woff'),
-    url('../font/산들고딕/AppleSDGothicNeoB.woff') format('woff');
-}
-
+@import url(font.css);
 
 * {
   margin: 0;
@@ -52,10 +28,12 @@ html {
 }
 
 body {
-  font-family: "Aktiv Grotesk", "Aktiv Grotesk KR", "Apple SD Gothic Neo", "맑은 고딕", "malgun gothic", 'Noto Sans KR', sans-serif;
-  font-size: 15px;
-  color: #222;
-  line-height: 1.4;
+  font-family: "Anek Malayalam", "Apple SD Gothic Neo", "맑은 고딕", "malgun gothic", 'Noto Sans KR', sans-serif;
+  font-size: 14px;
+  color: #000;
+  line-height: 1.2em;
+  font-weight: 400;
+  
 }
 
 /* 공통클래스 */
@@ -67,6 +45,10 @@ body {
   clear: both;
 }
 
+.wrap {
+
+}
+
 .inner {
   position: relative;
   display: block;
@@ -74,3 +56,5 @@ body {
   max-width: 1400px;
   margin: 0 auto;
 }
+
+ 
