이미지 파일 생성

--- a/css/main.css
+++ b/css/main.css
@@ -57,4 +57,56 @@ body {
   margin: 0 auto;
 }
 
- 
+ /* 전체 레이아웃 */
+
+ /* 상단 */
+ .header {
+
+ }
+
+ /* 사이드 메뉴 */
+ .side-menu {
+
+ }
+
+ /* 비주얼 */
+ .visual {
+
+ }
+
+ /* 아티스트 */
+ .artist {
+
+ }
+
+ /* 세라믹 */
+ .ceramic {
+
+ }
+
+ /* 글라스 */
+ .glass {
+
+ }
+
+ /* 메탈 */
+ .metal {
+
+ }
+
+/* 페이퍼 */
+.paper {
+
+}
+
+/* 페브릭 */
+.fabric {
+
+}
+
+/* 하단 */
+.footer {
+  
+}
+
+
