--- a/css/main.css
+++ b/css/main.css
@@ -73,17 +73,6 @@ body {
 
 }
 
-.sw-next {
-  position: absolute;
-  right: 0;
-  bottom: 20px;
-  width: 14px;
-  height: 24px;
-  background: url('../images/icon_next.svg') no-repeat center;
-  border: 0;
-  cursor: pointer;
-}
-
 /* 전체 레이아웃 */
 
 /* 상단 */
@@ -251,18 +240,31 @@ height: 498px;
   display: block;
   width: 100%;
 }
+
+.sw-ceramic-next {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  width: 14px;
+  height: 24px;
+  background: url('../images/icon_next.svg') no-repeat center;
+  border: 0;
+  cursor: pointer;
+}
+
 .sw-list li img {
   width: 100%;
   height: 490px;
   transition: all 0.3s;
 
-
 }
+
 .main-img {
   /* position: absol; */
   /* transition: all 0.5s; */
   opacity: 1;
 }
+
 .change-img {
   position: absolute;
   left: 0;
@@ -286,30 +288,41 @@ height: 498px;
   position: relative;
   display: inline-block;
 }
+.sw-glass-next {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  width: 14px;
+  height: 24px;
+  background: url('../images/icon_next.svg') no-repeat center;
+  border: 0;
+  cursor: pointer;
+}
 
-.sw-ceramic-list li {
+.sw-glass-list li {
   position: relative;
   margin-right: 1.53%;
   width: 32.3%;
 
 }
-.sw-ceramic-list li a{
+.sw-glass-list li a{
   position: relative;
   display: block;
   width: 100%;
 }
-.sw-ceramic-list li img {
+.sw-glass-list li img {
   width: 100%;
   height: 490px;
   transition: all 0.3s;
 
-
 }
+
 .main-img {
   /* position: absol; */
   /* transition: all 0.5s; */
   opacity: 1;
 }
+
 .change-img {
   position: absolute;
   left: 0;
@@ -317,22 +330,188 @@ height: 498px;
   opacity: 0;
 } 
 
-.sw-ceramic-list li:hover .main-img{
+.sw-glass-list li:hover .main-img{
   opacity: 0;
 }
 
-.sw-ceramic-list li:hover .change-img {
+.sw-glass-list li:hover .change-img {
   opacity: 1;
 }
 
 /* 메탈 */
 .metal {}
 
+.metal h2 a {
+  position: relative;
+  display: inline-block;
+}
+.sw-metal-next {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  width: 14px;
+  height: 24px;
+  background: url('../images/icon_next.svg') no-repeat center;
+  border: 0;
+  cursor: pointer;
+}
+
+.sw-metal-list li {
+  position: relative;
+  margin-right: 1.53%;
+  width: 32.3%;
+
+}
+.sw-metal-list li a{
+  position: relative;
+  display: block;
+  width: 100%;
+}
+.sw-metal-list li img {
+  width: 100%;
+  height: 490px;
+  transition: all 0.3s;
+
+}
+
+.main-img {
+  /* position: absol; */
+  /* transition: all 0.5s; */
+  opacity: 1;
+}
+
+.change-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+} 
+
+.sw-metal-list li:hover .main-img{
+  opacity: 0;
+}
+
+.sw-metal-list li:hover .change-img {
+  opacity: 1;
+}
+
 /* 페이퍼 */
-.paper {}
+.paper {} 
+
+.paper h2 a {
+  position: relative;
+  display: inline-block;
+}
+
+.sw-paper-next {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  width: 14px;
+  height: 24px;
+  background: url('../images/icon_next.svg') no-repeat center;
+  border: 0;
+  cursor: pointer;
+}
+
+.sw-paper-list li {
+  position: relative;
+  margin-right: 1.53%;
+  width: 32.3%;
+
+}
+.sw-paper-list li a{
+  position: relative;
+  display: block;
+  width: 100%;
+}
+.sw-paper-list li img {
+  width: 100%;
+  height: 490px;
+  transition: all 0.3s;
+
+}
+
+.main-img {
+  /* position: absol; */
+  /* transition: all 0.5s; */
+  opacity: 1;
+}
+
+.change-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+} 
+
+.sw-paper-list li:hover .main-img{
+  opacity: 0;
+}
+
+.sw-paper-list li:hover .change-img {
+  opacity: 1;
+}
+
 
 /* 페브릭 */
 .fabric {}
+
+.fabric h2 a {
+  position: relative;
+  display: inline-block;
+}
+
+.sw-fabric-next {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  width: 14px;
+  height: 24px;
+  background: url('../images/icon_next.svg') no-repeat center;
+  border: 0;
+  cursor: pointer;
+}
+
+.sw-fabric-list li {
+  position: relative;
+  margin-right: 1.53%;
+  width: 32.3%;
+
+}
+.sw-fabric-list li a{
+  position: relative;
+  display: block;
+  width: 100%;
+}
+.sw-fabric-list li img {
+  width: 100%;
+  height: 490px;
+  transition: all 0.3s;
+
+}
+
+.main-img {
+  /* position: absol; */
+  /* transition: all 0.5s; */
+  opacity: 1;
+}
+
+.change-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+} 
+
+.sw-fabric-list li:hover .main-img{
+  opacity: 0;
+}
+
+.sw-fabric-list li:hover .change-img {
+  opacity: 1;
+}
+
 
 /* 하단 */
 .footer {}
